mbx4.css
/* #region MATHRO HOLDER */
/* CONFIG */
mathro-batix [data-holder] {
  --animation-start: 50%;
  --animation-end: 80%;
  --font-size: 2.5em;
  --back-color: #111;
  --mbx-h: 35;
  --mbx-s: 80%;
  --mbx-l: 40%;
  --mbx-a: 1;

  --frak-font-size: 0.75em;
  --frak-vertical-align: 65%;
}

/* LAYOUT */
mathro-batix [data-holder] {
  width: 100%;
  display: inline-flex;
  flex-direction: column;
  overflow: visible;
  padding: 0px 10px;
  background-color: var(--back-color);
  color: var(--main-color);
  font-size: var(--font-size);
}

/* FONTS */
@font-face {
  font-family: "Luckiest Guy";
  src: url(luckiest.ttf);
}
/* #endregion */

/* #region BATIX */
/* CONFIG */
x,
path {
  --main-color: hsl(var(--mbx-h), 80%, 50%);
  --white-color: hsl(var(--mbx-h), 100%, 98%);
  --grey-color: hsl(var(--mbx-h), 10%, 40%);
  --inverse-color: hsl(calc(var(--mbx-h) + 180), 80%, 50%);

  /* 
    these values set with .during(start, end) 
    --ani-start: 0; 
    --ani-end: 1;
  */

  --animation-range: contain
    calc(
      var(--animation-start) + (var(--animation-end) - var(--animation-start)) * var(--ani-start, 0)
    )
    contain
    calc(
      var(--animation-start) + (var(--animation-end) - var(--animation-start)) * var(--ani-end, 1)
    );
}

/* LAYOUT */
x {
  box-sizing: border-box;
  position: relative;
  display: inline-flex;
  flex-direction: row;
  gap: 0.25em;
  justify-content: center;
  text-wrap: nowrap;
  font-weight: normal;
}
/* #endregion */

/* #region INTRO */
[data-intro] {
  position: relative;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 5vh;
  margin-bottom: 20vh;
  width: 100%;
  color: var(--grey-color);
  font-style: italic;
  font-size: 0.5em;
  text-align: center;
  text-wrap: wrap;
  user-select: none;
}
/* #endregion */

/* #region LOGO */
[data-logo] {
  width: 100%;
  padding-top: 5vh;
  font-family: "Luckiest Guy";
  font-size: 2.25em;
  font-style: normal;
  line-height: 50px;
  text-align: center;
  color: hsl(var(--mbx-h), 100%, 85%);
  -webkit-text-stroke: 0.01em var(--main-color);
  background-color: #111;
}
@media screen and (orientation: portrait) {
  [data-logo] {
    font-size: 1.5em;
  }
}
/* #endregion */

/* #region STEP */
[data-step] {
  width: 100%;
  display: inline-block;
  position: relative;
  margin-bottom: 30vh;
}
[data-stage],
[data-step] > :nth-child(1) {
  /* background-color: hsla(0, 100%, 100%, 0.1); */
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 0.25em;
  align-items: baseline;
  justify-content: center;
  /* container-type: inline-size; */
  /* contain: layout size style; */
  overflow: visible;
  height: 1lh;
  /* font-family: "Times New Roman", Times, serif; */
  font-family: "Noto";
  view-timeline: --anim-timeline block;
}
[data-step] > :nth-child(2) {
  margin-top: 1.5em;
  width: 100%;
}
/* #endregion */

/* #region SUP|SUB */
[data-sup],
[data-sub] {
  position: relative;
  display: inline-flex;
  flex-direction: row;
  gap: 0.25em;
  align-items: baseline;
  justify-content: center;
  white-space: nowrap;
  font-size: var(--pow-size, 0.55em);
  margin-left: -0.35em;
}
[data-sup] {
  /* line-height: 1; */
  /* vertical-align: 70%; */
}
[data-sub] {
  border: 2px dashed green;
  line-height: 0.5;
  vertical-align: -70%;
  font-style: italic;
}
/* #endregion */

/* #region BLANK */
[data-blank] {
  /* background-color: hsla(40, 100%, 90%, 0.5); */
  /* color: hsla(40, 100%, 10%, 0.5); */
  display: inline-grid;
  grid-template-areas: stack;
  gap: 0;
}
[data-blank] > x {
  grid-area: stack;
}
[data-blank] > x:nth-child(1) {
  /* !!! invisible color HAKC !!! */
  color: hsla(0, 0%, 0%, 0);
  opacity: 0;
}
[data-blank="origin"] {
  will-change: margin, left, width, height;
  animation: mbx-blank-origin linear both;
  animation-timeline: --anim-timeline;
  animation-range: var(--animation-range);
}
@keyframes mbx-blank-origin {
  from {
    margin: 0 0;
    left: 0;
    width: var(--blank-w);
    /* height: var(--blank-h); */
  }
  to {
    margin: 0 -0.125em;
    left: -0.2em;
    width: 0px;
    /* height: 0px; */
  }
}
[data-blank="destiny"] {
  /* background-color: hsla(300, 100%, 90%, 0.5); */
  /* color: hsla(300, 100%, 20%, 0.3); */
  position: relative;
  will-change: margin, left, width, height;
  animation: mbx-blank-destiny linear both;
  animation-timeline: --anim-timeline;
  animation-range: var(--animation-range);
}
@keyframes mbx-blank-destiny {
  from {
    margin: 0 -0.125em;
    left: 0;
    width: 0px;
    /* height: var(--blank-h); */
  }
  to {
    margin: 0 0;
    left: 0;
    width: var(--blank-w);
    /* height: 0px; */
  }
}
/* #endregion */

/* #region MOVE */
[data-move] {
  position: absolute;
  /* z-index: 10; */
  /* --mbx-move-trans: translate(calc(var(--mbx-dx) + 0px + 0.0em), calc(var(--mbx-dy) - 0px)); */
  will-change: left, top, width, height, font;
  animation: mbx-move linear both;
  animation-timeline: --anim-timeline;
  animation-range: var(--animation-range);
}
@keyframes mbx-move {
  from {
    /* transform: var(--mbx-move-trans); */
    left: var(--mbx-old-left);
    top: var(--mbx-old-top);
    width: var(--mbx-old-wide);
    height: var(--mbx-old-high);
    font-size: var(--mbx-old-font);
  }
  to {
    /* transform: translate(0, 0); */
    left: var(--mbx-new-left);
    top: var(--mbx-new-top);
    width: var(--mbx-new-wide);
    height: var(--mbx-new-high);
    font-size: var(--mbx-new-font);
  }
}
/* #endregion */

/* #region GROW|SHRINK */
x:has(> [data-grow]) {
  --mbx-grow-margin: 0 -0.125em;
  will-change: margin;
  animation: mbx-grow-margin linear both;
  animation-timeline: --anim-timeline;
  animation-range: var(--animation-range);
}
[data-tite] x:has(> [data-grow]) {
  --mbx-grow-margin: 0 0em;
}
x:has(> [data-grow="fore"]) {
  animation-direction: normal;
}
x:has(> [data-grow="back"]) {
  animation-direction: reverse;
}
/* ... */

